Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30643

[Compiled error] m_fontEngineData is not declared in this scope (DirectWrite)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.1.0 Beta 1
    • 5.0.2
    • Core: Other
    • None
    • Windows 7 x64 with GCC 4.7.2
    • 9a89d614f26262fcb6895d1dab93519d732ba011

    Description

      I'm compiling Qt 5.0.2 with -directwrite option on configure and received a m_fontEngineData is not declared in this scope during the mingw32-make.

      Based on this commit (http://qt.gitorious.org/qt/qtbase/commit/ff1b65a58c21a77d00f75581a7492c2fafd67ae8) the variable as been removed from qwindowsfontdatabase.cpp (http://qt.gitorious.org/qt/qtbase/blobs/ff1b65a58c21a77d00f75581a7492c2fafd67ae8/src/plugins/platforms/windows/qwindowsfontdatabase.cpp) but as you can see on line 1294, the variable is still present.

      Replacing m_fontEngineData for sharedFontData() in qtbase/src/plugins/platforms/windows/qwindowsfontdatabase.cpp fixed the compiled error.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            johnlamericain Jonathan Courtois
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes